# unsubscribe

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  config.toml.example  install.sh
.cargo/: config.toml.example
.github/workflows/: release.yml
scripts/: build-linux.sh  build-macos.sh
src/: config.rs  main.rs  scanner.rs  tui.rs
src-legacy/: main.rs  scanner.rs
unsubscribe-cli/: Cargo.toml
unsubscribe-cli/src/: config.rs  http.rs  main.rs  oauth.rs  progress.rs  tui.rs
unsubscribe-core/: Cargo.toml
unsubscribe-core/src/: lib.rs  parsing.rs  ports.rs  types.rs  unsubscribe.rs
unsubscribe-email/: Cargo.toml
unsubscribe-email/src/: lib.rs  smtp.rs
unsubscribe-email/src/gmail/: api.rs  mod.rs
unsubscribe-email/src/imap/: mod.rs
unsubscribe-imap/: Cargo.toml
unsubscribe-imap/src/: lib.rs
unsubscribe-persistence/: Cargo.toml
unsubscribe-persistence/src/: config.rs  credential.rs  data.rs  lib.rs
