[workspace]
members = [
    "unsubscribe-core",
    "unsubscribe-imap",
    "unsubscribe-persistence",
    "unsubscribe-cli",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
authors = ["Mike Henderson"]

# src-legacy/ contains the original monolith code for reference during migration.
# Delete once all crates have feature parity.
