[package]
name = "unsubscribe-persistence"
version = "0.1.2"
edition = "2024"
license = "GPL-3.0-only"
authors = ["Mike Henderson"]

[dependencies]
unsubscribe-core = { path = "../unsubscribe-core" }
anyhow = "1"
csv = "1"
keyring = { version = "3", features = ["apple-native", "sync-secret-service"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
toml = "0.8"
